# projeto-comp-grafica

./: .gitignore  CMakeLists.txt  License  README.md  ToDO.md
CloudURP/Assets/: AdvectKernel.compute  CLOUD_GENERATION_GUIDE.md  DiffusionKernel.compute  FludSim.compute  FluidController.cs  FluidSimulation.compute  InitKernel.compute  ParticleMaterial.mat  ParticleRender.shader  cameraMovement.cs
CloudURP/Assets/Scenes/: MainScene.unity  SampleScene.unity
CloudURP/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
CloudURP/ProjectSettings/: ProjectSettings.asset
Terrain Geneartaion/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Terrain Geneartaion.sln
Terrain Geneartaion/UserSettings/: EditorUserSettings.asset
Terrain Geneartaion/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-6000.dwlt
assets/shaders/: default.frag  default.vert
c-project/src/: app.c  defines.h
c-project/src/modules/obj_parser/: obj_parser.h
c-project/src/modules/render/: render.c  render.h
c-project/src/modules/texture/: texture.h
c-project/src/modules/utils/: dynamic_array.c  utils.h
docs/: .intro.tex.swp  abstract.tex  bibliography.bib  conclusao.tex  diagrama.tex  fluidos.md  fluidos.tex  intro.md  intro.tex  justificativa.tex  metodologia.tex  objetivos.tex  perlin.md  perlin.tex  resultados.tex  sistema-de-particulas.md  sistema-de-particulas.tex  terrenos.md  terrenos.tex  trabalho.tex  unity-urp.tex  volumes.md  volumes.tex
docs/notas/brum/: catadao sobre nuvens.md  conclusão.md  pesquisa geral de nuvens.md
notas/brum/: catadao sobre nuvens.md  pesquisa geral de nuvens.md  survey of clouds.md
src/: app.c  app.h  defines.h
src/modules/logger/: log.c  log.h
src/modules/obj_parser/: obj_parser.c  obj_parser.h
src/modules/render/: render.c
src/modules/shaders/: shaders.c  shaders.h
src/modules/texture/: texture.c  texture.h
src/modules/utils/: dynamic_array.c  dynamic_array.h  utils.c
src/modules/window/: window.c  window.h
(+2 files in other folders)
